--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="Keywords" content="Hoorn, tourist, hotel, event, restaurant">
         <meta name="description" content="Website for tourists going to Hoorn with information on hotels, restaurants, events and the history of Hoorn">
         <meta name="author" content="Tim">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
         <title>GoingHoorn</title>
     </head>
