--- a/restaurants.html
+++ b/restaurants.html
@@ -5,7 +5,9 @@
         <meta name="Keywords" content="Hoorn, tourist, hotel, event, restaurant">
         <meta name="description" content="Website for tourists going to Hoorn">
         <meta name="author" content="Tim">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
+
         <title>GoingHoorn</title>
     </head>
     <body>
@@ -41,8 +43,33 @@
         </header>
         
         <main>
-            <section>
-
+            <section class="RestaurantDetails">
+                <ul>
+                    <li>
+                        <img src="img/restaurant/x.png" title="" alt="">
+                        <ul>
+                            <li>
+                                <h1>Restaurant</h1> 
+                            </li>
+                            <li>
+                                Keuken: Internationaal, met een focus op visgerechten
+                            </li>
+                            <li>
+                                Beschrijving: Gevestigd in een historische toren uit de 16e eeuw, biedt dit restaurant een unieke eetervaring met uitzicht over het water. 
+                            </li>
+                            <li>
+                                De sfeer is romantisch en rustiek, perfect voor een bijzondere gelegenheid.
+                            </li>
+                            <li>
+                                Specialiteit: Dagverse vis, schaal- en schelpdieren.
+                            </li>
+                            <li>
+                                Locatie: Direct aan het IJsselmeer.
+                            </li>
+                        </ul>
+                        <a href="">Go to Website</a>
+                    </li>
+                </ul>
             </section>
         </main>
 
