finish desktop webverion

--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,14 @@
         <meta name="author" content="Tim">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
+        <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
         <title>GoingHoorn</title>
     </head>
     <body>
         <header>
             <img class="background" src="./img/NavBackground/NavContact.png" title="BackgroundNavContact" alt="Old tower in the center at a big harbor">
             <section>  
-                <img src="img/logo.png" title="GoingHoorn logo" alt="background test test test test"> 
+                <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 <nav>
                     <ul>
                         <li>
@@ -78,7 +79,7 @@
         <footer>
             <ul>
                 <li>
-                    <img src="img/x.png" title="GoingHoorn logo" alt="background test test test test"> 
+                    <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 </li>
                 <li>
                     GoingHoorn&#33; &copy; 2024. All rights reserved.
