--- a/hotels.html
+++ b/hotels.html
@@ -7,13 +7,14 @@
         <meta name="author" content="Tim">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
+        <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
         <title>GoingHoorn</title>
     </head>
     <body>
         <header>
             <img class="background" src="./img/NavBackground/NavHotels.png" title="BackgroundNavHotels" alt="hotel room with big blue bed">
             <section>
-                <img src="img/logo.png" title="GoingHoorn logo" alt="background test test test test"> 
+                <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 <nav>
                     <ul>
                         <li>
@@ -42,15 +43,52 @@
         </header>
         
         <main>
-            <section>
-
+             <section class="HotelDetails">
+                <h1>
+                    There are many good Hotels in Hoorn but wich one are actualy good and are worth a Night or two?
+                </h1>
+                <ul>
+                    <li>
+                        <img src="img/Hotels/Van-der-Valk.png" title="Hotel van der Valk" alt="big brick hotel in the foreground with blue sky">
+                        <h1>Van Der valk Hotel</h1> 
+                        <p>
+                            This modern hotel that has luxurius rooms, a hotel, swimingpool, and a sportcentre. The hotel also has a cinima and a casino for extra entertainment. price: 120 euro per night. Go to Website
+                        </p>
+                        <a href="">Go to Website</a>
+                    </li>
+                    <li>
+                        <img src="img/Hotels/Oostereiland.png" title="Hotel Oostereiland" alt="Old brick prison with many windows">
+                        <h1>Hotel Oostereiland</h1> 
+                        <p>
+                            This unique hotel is whas a old prison en is on the island next to the harbor of Hoorn. The rooms are refurbished prisonrooms, wich makes for a unique experience. Price 85 euro per night. Go to Website 
+                        </p>
+                        <a href="">Go to Website</a>
+                    </li>
+                    <li>
+                        <img src="img/Hotels/Hotel-de-Magneet.png" title="Hotel de Magneet" alt="dutch house with old striped sunscreen">
+                        <h1>Hotel de Magneet</h1> 
+                        <p>
+                            This charming, small hotel is in the harbor of hoorn and has charming rooms and cute feel. It has a beautiful look at the old harbor of Hoorn. and is walking distance to downtown hoorn. price: 100 euro per night. Go to Website
+                        </p>
+                        <a href="">Go to Website</a>
+                    </li>
+                    <li>
+                        <img src="img/Hotels/Hotel-Petit-Nord.png" title="Hotel Petit Nord" alt="house with blue windows with red roof">
+                        <h1>Hotel Petit Nord</h1> 
+                        <p>
+                            In downtown Hoorn, this hotel has modern rooms and a aziatic restaraunt. The hotel is in close proximity of Hoorn's trainstation and downtown area. Price: 90 euro per night. 
+                        </p>
+                        <a href="">Go to Website</a>
+                    </li>
+                
+                </ul>
             </section>
         </main>
 
         <footer>
             <ul>
                 <li>
-                    <img src="img/x.png" title="GoingHoorn logo" alt="background test test test test"> 
+                    <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 </li>
                 <li>
                     GoingHoorn&#33; &copy; 2024. All rights reserved.
