--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
         <meta name="author" content="Tim">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
+        <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
         <title>GoingHoorn</title>
     </head>
     <body>
         <header>
             <img class="background" src="./img/NavBackground/NavIndex.png" title="BackgroundNavIndex" alt="birds eye view of the city Hoorn">
             <section>
-                <img src="img/logo.png" title="GoingHoorn logo" alt="background test test test test"> 
+                <input type="checkbox" id="menu-toggle">
+                <label for="menu-toggle" class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+
+                <img src="img/logo.png" title="GoingHoorn logo" alt="Logo with windmill and title GoingHoorn"> 
                 <nav>
                     <ul>
                         <li>
@@ -43,6 +51,12 @@
         
         <main>
             <section class="IndexPageDetails">
+                <h1>
+                    The city of Hoorn with a rich history that dates back to the 14th centuary. The Hoorn was one of the big city's that was of importance in the golden era of the Netherlands, when the VOC was active. Want to know more of the history of Hoorn, than this is the place.
+                </h1>
+                <h1>
+                    Look no further because we will tell you all about all of that here at GoingHoorn.
+                </h1>
                 <ul>
                     <li>
                         <aside>
@@ -51,44 +65,43 @@
                         <article>
                             <h1>Restaurants</h1>
                             <p>
-                                Hoorn biedt een diverse culinaire ervaring met een breed scala aan restaurants&comma; van typisch Nederlandse gerechten tot internationale keukens&period; Veel eetgelegenheden liggen aan de sfeervolle haven of in de gezellige straatjes van het oude centrum&comma; waardoor je hier kunt genieten van een ontspannen maaltijd in een mooie omgeving&period;
+                                Hoorn has many diverent restaurants, from tipical Dutch restautants to international kitchens. alot of charming restaurants in the harbor and downtown Hoorn wich you can have a good meal at,  but wich ones should you visit?
                             </p>
                             <a href="./restaurants.html">Read More</a>
                         </article>
                     </li>
                     <li>
                         <aside>
-                            <img src="img/IndexDetail/RestaurantDetail.png" title="hotels" alt="dddddddddddddddddddddddddddddddddddddddddd">
+                            <img src="img/IndexDetail/HotelDetail.png" title="hotels" alt="Hotel room with white bed and wood background">
                         </aside>
                         <article>
                             <h1>Hotels</h1>
                             <p>
-                               Hoorn heeft een breed aanbod aan hotels&comma; van moderne accommodaties tot sfeervolle historische gebouwen met uitzicht op de haven&period; Veel hotels zijn gevestigd in monumentale panden en combineren comfort met de charme van vroeger&comma; wat ze ideaal maakt voor zowel toeristen als zakenreizigers&period;         
+                                Hoorn is a City with alot of different hotels, there are old historic building but also more modern accomodation. Alot of the hotels are old momunental building and combine comfort with their old charms. But wich ones actualy good?
                             </p>
                             <a href="./hotels.html">Read More</a>
                         </article>
                     </li>
                     <li>
                         <aside>
-                            <img src="img/IndexDetail/RestaurantDetail.png" title="restaurants" alt="dddddddddddddddddddddddddddddddddddddddddd"> 
+                            <img src="img/IndexDetail/EventDetail.png" title="restaurants" alt="golden hour dock with boats in the background"> 
                         </aside>
                         <article>
                             <h1>Events</h1>
                             <p>
-                                Hoorn heeft veel interessante plekken om te ontdekken&comma; zoals de oude haven&comma; de Grote Kerk en het Oostereiland&period; Het stadscentrum is vol met historische gevels en pittoreske straatjes&period; Bezienswaardigheden zoals het Museum van de 20e Eeuw en Schouwburg Het Park bieden volop cultuur en entertainment voor bezoekers&period;
+                                The city of Hoorn has many fun places to visit Like the old harbor, the old church and oostereiland. Downtown Hoorn also has alot of history and old buildings. With such a rich history there are alot of historic building and momuments but wich ones are now realy of importance to visit?
                             </p>
                             <a href="./events.html">Read More</a>
                         </article>
                     </li>
                     <li>
                         <aside>
-                            <img src="img/IndexDetail/RestaurantDetail.png" title="history" alt="dddddddddddddddddddddddddddddddddddddddddd">
+                            <img src="img/IndexDetail/HistoryDetail.png" title="history" alt="Painting of hoorn from the water">
                         </aside>
                         <article>
                             <h1>History</h1>
                             <p>
-                                Hoorn is een stad met een rijke geschiedenis die teruggaat tot de 14e eeuw&period; In de Gouden Eeuw was Hoorn een belangrijke VOC&minus;stad en een centrum voor handel en scheepvaart&period; De stad staat vol met historische gebouwen&comma; zoals het Westfries Museum en de Hoofdtoren&comma; die het roemrijke verleden van Hoorn laten zien&period;
-
+                                The city of Hoorn with a rich history that dates back to the 14th centuary. The Hoorn was one of the big city's that was of importance in the golden era of the Netherlands, when the VOC was active. Want to know more of the history of Hoorn, than this is the place.
                             </p>
                             <a href="./history.html">Read More</a>
                         </article>
@@ -101,7 +114,7 @@
         <footer>
             <ul>
                 <li>
-                    <img src="img/logo.png" title="GoingHoorn logo" alt="background test test test test"> 
+                    <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 </li>
                 <li>
                     GoingHoorn&period; &copy; 2024. All rights reserved.
