--- a/restaurants.html
+++ b/restaurants.html
@@ -7,14 +7,14 @@
         <meta name="author" content="Tim">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
-
+        <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
         <title>GoingHoorn</title>
     </head>
     <body>
         <header>
             <img class="background" src="./img/NavBackground/NavRestaurants.png" title="BackgroundNavRestaurants" alt="Restaurant with plants and warm aesthetics">
             <section>
-                <img src="img/logo.png" title="GoingHoorn logo" alt="background test test test test"> 
+                <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 <nav>
                     <ul>
                         <li>
@@ -38,35 +38,38 @@
                     </ul>
                 </nav>
                 <h1>Hoorn</h1>
-                <h2>The City of Gold</h2>
+                <h2>Want to eat something good?</h2>
             </section>
         </header>
         
         <main>
             <section class="RestaurantDetails">
+                <h1>
+                    There are many good restaurants in Hoorn but wich one are actualy good and are worth a visit?
+                </h1>
                 <ul>
                     <li>
-                        <img src="img/restaurant/x.png" title="" alt="">
-                        <ul>
-                            <li>
-                                <h1>Restaurant</h1> 
-                            </li>
-                            <li>
-                                Keuken: Internationaal, met een focus op visgerechten
-                            </li>
-                            <li>
-                                Beschrijving: Gevestigd in een historische toren uit de 16e eeuw, biedt dit restaurant een unieke eetervaring met uitzicht over het water. 
-                            </li>
-                            <li>
-                                De sfeer is romantisch en rustiek, perfect voor een bijzondere gelegenheid.
-                            </li>
-                            <li>
-                                Specialiteit: Dagverse vis, schaal- en schelpdieren.
-                            </li>
-                            <li>
-                                Locatie: Direct aan het IJsselmeer.
-                            </li>
-                        </ul>
+                        <img src="img/Restaurants/Madame-Cheung.png" title="Restaurant Madame Cheung" alt="restaurant with tables in the front ant colorfull walls">
+                        <h1>Restaurant Cheung Cuisine</h1> 
+                        <p>
+                            Madame Cheung Asian Cuisine has a modern look at the traditional asian resipies with a stylefull interior the restaurant puts alot of care in its fresh ingrienants and good taste. Speciality: Sushi and other asian food. Location: In the center of Hoorn        
+                        </p>
+                        <a href="">Go to Website</a>
+                    </li>
+                    <li>
+                        <img src="img/Restaurants/De-Hoofdtoren.png" title="Restaurant De Hoofdtoren" alt="restaurant with tables with old fashioned look">
+                        <h1>Restaurant de Hoofdtoren</h1> 
+                        <p>
+                            With a focus on fishfood this restaurant is placed in the historic tower build in the 16th centuary. This resteraunt has a unique dining experience with a view on the harbor. The atmosphere is romantic and rustic, perfect for a special occasion. Speciality: Fresh fish, crustaceans and shellfish. Location: Directly on het Ijsselmeer.
+                        </p>
+                        <a href="">Go to Website</a>
+                    </li>
+                    <li>
+                        <img src="img/Restaurants/Hendrickje-Stoffels.png" title="Restaurant Hendrickje Stoffels" alt="restaurant with bar in front and modern look">
+                        <h1>Hendrinkje Stoffels</h1> 
+                        <p>
+                            This restaurant has a cozy, living room-like atmosphere and offers a wide range of dishes with a modern twist. The menu changes regularly and a lot of local and seasonal products are used. Specialty: Traditional dishes with a focus on local ingredients. Location: Cozyly located in the old town of Hoorn.
+                        </p>
                         <a href="">Go to Website</a>
                     </li>
                 </ul>
@@ -76,7 +79,7 @@
         <footer>
             <ul>
                 <li>
-                    <img src="img/x.png" title="GoingHoorn logo" alt="background test test test test"> 
+                    <img src="img/logo.png" title="GoingHoorn logo" alt="logo of GoingHoorn white mill with white text"> 
                 </li>
                 <li>
                     GoingHoorn&#33; &copy; 2024. All rights reserved.
